Install and set Devise

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,8 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= render 'partials/layout/head_bar' %>
+    <%= render 'partials/layout/body' %>
   </body>
 </html>
+
