--- a/app/views/partials/layout/_sidebar.html.erb
+++ b/app/views/partials/layout/_sidebar.html.erb
@@ -1,5 +1,5 @@
 <div class="sidebar well">
-  <%= render partial: 'partials/devise_panel' %>
+  <%= render partial: 'partials/devise/panel' %>
 
   <div class="list-group">
     <%= link_to 'Home', root_url, class: "list-group-item list-group-item-action" %>
